--- a/package.json
+++ b/package.json
@@ -17,23 +17,26 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "^51.0.32",
+    "expo": "~52.0.7",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
+    "expo-status-bar": "~2.0.0",
     "jwt-decode": "^4.0.0",
-    "metro": "~0.80.8",
-    "metro-config": "^0.80.12",
-    "react": "18.2.0",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-core": "^0.81.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "metro-resolver": "^0.81.0",
+    "react": "18.3.1",
     "react-dom": "18.2.0",
     "react-is": "^18.3.1",
-    "react-native": "0.74.5",
+    "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "^4.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
