RCPS-119 (mobile-app-development: Implement View of Violation List Module for Student, bugs fixing and Refactor based on new backend and script)

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -21,7 +21,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
   }
 }
 
-rootProject.name = 'PrefectSystem'
+rootProject.name = 'osdrecordsmgtmobileappl'
 
 dependencyResolutionManagement {
   versionCatalogs {
