--- a/app.json
+++ b/app.json
@@ -1,33 +1,7 @@
 {
   "expo": {
-    "name": "Prefect-System",
-    "slug": "Prefect-System",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/images/favicon.png"
-    },
-    "assetBundlePatterns": [
-      "assets/fonts/*"
-    ],
-    "plugins": [
-      "expo-font"
-    ]
+    "name": "osd-records-mgt-mobile-appl",
+    "slug": "osd-records-mgt-mobile-appl",
+    "version": "1.0.0"
   }
 }
