--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "mobileapp",
+  "name": "osd-records-mgt-mobile-appl",
+  "license": "0BSD",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~52.0.7",
+    "expo": "^52.0.11",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "~12.0.10",
-    "expo-splash-screen": "~0.27.6",
+    "expo-font": "~13.0.1",
+    "expo-splash-screen": "^0.29.13",
     "expo-status-bar": "~2.0.0",
     "jwt-decode": "^4.0.0",
     "metro": "^0.81.0",
@@ -29,13 +30,13 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "metro-resolver": "^0.81.0",
     "react": "18.3.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
+    "react-native": "^0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.1.0",
     "react-native-web": "~0.19.10"
   },
